--- a/.makim.yaml
+++ b/.makim.yaml
@@ -54,8 +54,13 @@ groups:
             help: Specify parameters to be used for tests
             type: string
             default: "-vv"
+        backend: bash
         run: |
-          pytest ${{ args.path }} ${{ args.params }}
+          pytest \
+            --cov=astx \
+            --cov-fail-under=95 \
+            --cov-report term-missing \
+            --no-cov-on-fail ${{ args.path }} ${{ args.params }}
 
       ci:
         help: run the sames tests executed on CI
