--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ src = ["./"]
 exclude = [
   'docs',
 ]
+fix = true
 
 [tool.ruff.lint]
 select = [
@@ -90,7 +91,6 @@ select = [
   "RUF", # Ruff-specific rules
   "I001",  # isort
 ]
-fixable = ["I001"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
