feat: Add support for docstring in yaml format (#4)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ makim = "1.20.0"
 virtualenv = "<=20.25.1"
 
 
+
+[tool.poetry.dependencies]
+types-pyyaml = ">=6"
 [tool.bandit]
 exclude_dirs = ["tests"]
 targets = "./"
@@ -77,17 +80,17 @@ src = ["./"]
 exclude = [
   'docs',
 ]
+fix = true
 
 [tool.ruff.lint]
 select = [
   "E",   # pycodestyle
   "F",   # pyflakes
-  "D",   # pydocstyle
+  # "D",   # pydocstyle
   "YTT", # flake8-2020
   "RUF", # Ruff-specific rules
   "I001",  # isort
 ]
-fixable = ["I001"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
